crates/spelldawn/tests/it/core/snapshots/it__core__create_game_tests__both_keep_opening_hands.snap
---
source: crates/spelldawn/tests/it/core/create_game_tests.rs
assertion_line: 167
expression: "Summary::summarize(&response)"
---

command_list: 
    RunInParallel: 
        MoveGameObjects: 
            id: C10
            position: 
                sorting_key: 17
                position: ObjectPositionHand { owner: User }
        MoveGameObjects: 
            id: C17
            position: 
                sorting_key: 19
                position: ObjectPositionHand { owner: User }
        MoveGameObjects: 
            id: C23
            position: 
                sorting_key: 16
                position: ObjectPositionHand { owner: User }
        MoveGameObjects: 
            id: C29
            position: 
                sorting_key: 20
                position: ObjectPositionHand { owner: User }
        MoveGameObjects: 
            id: C43
            position: 
                sorting_key: 18
                position: ObjectPositionHand { owner: User }
    CreateOrUpdateCard: 
        card: 
            card_id: C10
            revealed_to_viewer: true
            is_face_up: false
            card_icons: 
                top_left_icon: "1"
                top_right_icon: 
                bottom_left_icon: 
                arena_icon: 
            arena_frame: "<SpriteAddress>"
            owning_player: User
            revealed_card: 
                card_frame: "<SpriteAddress>"
                title_background: "<SpriteAddress>"
                jewel: "<SpriteAddress>"
                image: "<SpriteAddress>"
                title: "Test Champion Spell"
                rules_text: "<RulesText>"
                targeting: 
                    can_play: false
                on_release_position: 
                    sorting_key: 4294967295
                    position: ObjectPositionStaging
        create_position: 
            sorting_key: 17
            position: ObjectPositionHand { owner: User }
        create_animation: Unspecified
    CreateOrUpdateCard: 
        card: 
            card_id: C17
            revealed_to_viewer: true
            is_face_up: false
            card_icons: 
                top_left_icon: "1"
                top_right_icon: 
                bottom_left_icon: 
                arena_icon: 
            arena_frame: "<SpriteAddress>"
            owning_player: User
            revealed_card: 
                card_frame: "<SpriteAddress>"
                title_background: "<SpriteAddress>"
                jewel: "<SpriteAddress>"
                image: "<SpriteAddress>"
                title: "Test Champion Spell"
                rules_text: "<RulesText>"
                targeting: 
                    can_play: false
                on_release_position: 
                    sorting_key: 4294967295
                    position: ObjectPositionStaging
        create_position: 
            sorting_key: 19
            position: ObjectPositionHand { owner: User }
        create_animation: Unspecified
    CreateOrUpdateCard: 
        card: 
            card_id: C23
            revealed_to_viewer: true
            is_face_up: false
            card_icons: 
                top_left_icon: "1"
                top_right_icon: 
                bottom_left_icon: 
                arena_icon: 
            arena_frame: "<SpriteAddress>"
            owning_player: User
            revealed_card: 
                card_frame: "<SpriteAddress>"
                title_background: "<SpriteAddress>"
                jewel: "<SpriteAddress>"
                image: "<SpriteAddress>"
                title: "Test Champion Spell"
                rules_text: "<RulesText>"
                targeting: 
                    can_play: false
                on_release_position: 
                    sorting_key: 4294967295
                    position: ObjectPositionStaging
        create_position: 
            sorting_key: 16
            position: ObjectPositionHand { owner: User }
        create_animation: Unspecified
    CreateOrUpdateCard: 
        card: 
            card_id: C29
            revealed_to_viewer: true
            is_face_up: false
            card_icons: 
                top_left_icon: "1"
                top_right_icon: 
                bottom_left_icon: 
                arena_icon: 
            arena_frame: "<SpriteAddress>"
            owning_player: User
            revealed_card: 
                card_frame: "<SpriteAddress>"
                title_background: "<SpriteAddress>"
                jewel: "<SpriteAddress>"
                image: "<SpriteAddress>"
                title: "Test Champion Spell"
                rules_text: "<RulesText>"
                targeting: 
                    can_play: false
                on_release_position: 
                    sorting_key: 4294967295
                    position: ObjectPositionStaging
        create_position: 
            sorting_key: 20
            position: ObjectPositionHand { owner: User }
        create_animation: Unspecified
    CreateOrUpdateCard: 
        card: 
            card_id: C43
            revealed_to_viewer: true
            is_face_up: false
            card_icons: 
                top_left_icon: "1"
                top_right_icon: 
                bottom_left_icon: 
                arena_icon: 
            arena_frame: "<SpriteAddress>"
            owning_player: User
            revealed_card: 
                card_frame: "<SpriteAddress>"
                title_background: "<SpriteAddress>"
                jewel: "<SpriteAddress>"
                image: "<SpriteAddress>"
                title: "Test Champion Spell"
                rules_text: "<RulesText>"
                targeting: 
                    can_play: false
                on_release_position: 
                    sorting_key: 4294967295
                    position: ObjectPositionStaging
        create_position: 
            sorting_key: 18
            position: ObjectPositionHand { owner: User }
        create_animation: Unspecified
    CreateOrUpdateCard: 
        card: 
            card_id: O18
            revealed_to_viewer: false
            is_face_up: false
            card_icons: 
                top_left_icon: 
                top_right_icon: 
                bottom_left_icon: 
                bottom_right_icon: 
                arena_icon: 
            arena_frame: "<SpriteAddress>"
            owning_player: Opponent
        create_position: 
            sorting_key: 4294967295
            position: ObjectPositionDeck { owner: Opponent }
        create_animation: Unspecified
    MoveGameObjects: 
        id: O18
        position: 
            sorting_key: 22
            position: ObjectPositionHand { owner: Opponent }
    UpdateGameView: 
        user: 
            side: Champion
            mana: 5
            can_take_action: false
        opponent: 
            side: Overlord
            mana: 5
            action_tracker: 3
            can_take_action: true
        raid_active: false
    RenderInterface: 
    panels: 
        main_controls: 
        card_anchor_nodes: 
    DisplayGameMessage: Dusk
channel_response: 
    RunInParallel: 
        MoveGameObjects: 
            id: C10
            position: 
                sorting_key: 17
                position: ObjectPositionHand { owner: Opponent }
        MoveGameObjects: 
            id: C17
            position: 
                sorting_key: 19
                position: ObjectPositionHand { owner: Opponent }
        MoveGameObjects: 
            id: C23
            position: 
                sorting_key: 16
                position: ObjectPositionHand { owner: Opponent }
        MoveGameObjects: 
            id: C29
            position: 
                sorting_key: 20
                position: ObjectPositionHand { owner: Opponent }
        MoveGameObjects: 
            id: C43
            position: 
                sorting_key: 18
                position: ObjectPositionHand { owner: Opponent }
    CreateOrUpdateCard: 
        card: 
            card_id: C10
            revealed_to_viewer: false
            is_face_up: false
            card_icons: 
                top_left_icon: 
                top_right_icon: 
                bottom_left_icon: 
                bottom_right_icon: 
                arena_icon: 
            arena_frame: "<SpriteAddress>"
            owning_player: Opponent
        create_position: 
            sorting_key: 17
            position: ObjectPositionHand { owner: Opponent }
        create_animation: Unspecified
    CreateOrUpdateCard: 
        card: 
            card_id: C17
            revealed_to_viewer: false
            is_face_up: false
            card_icons: 
                top_left_icon: 
                top_right_icon: 
                bottom_left_icon: 
                bottom_right_icon: 
                arena_icon: 
            arena_frame: "<SpriteAddress>"
            owning_player: Opponent
        create_position: 
            sorting_key: 19
            position: ObjectPositionHand { owner: Opponent }
        create_animation: Unspecified
    CreateOrUpdateCard: 
        card: 
            card_id: C23
            revealed_to_viewer: false
            is_face_up: false
            card_icons: 
                top_left_icon: 
                top_right_icon: 
                bottom_left_icon: 
                bottom_right_icon: 
                arena_icon: 
            arena_frame: "<SpriteAddress>"
            owning_player: Opponent
        create_position: 
            sorting_key: 16
            position: ObjectPositionHand { owner: Opponent }
        create_animation: Unspecified
    CreateOrUpdateCard: 
        card: 
            card_id: C29
            revealed_to_viewer: false
            is_face_up: false
            card_icons: 
                top_left_icon: 
                top_right_icon: 
                bottom_left_icon: 
                bottom_right_icon: 
                arena_icon: 
            arena_frame: "<SpriteAddress>"
            owning_player: Opponent
        create_position: 
            sorting_key: 20
            position: ObjectPositionHand { owner: Opponent }
        create_animation: Unspecified
    CreateOrUpdateCard: 
        card: 
            card_id: C43
            revealed_to_viewer: false
            is_face_up: false
            card_icons: 
                top_left_icon: 
                top_right_icon: 
                bottom_left_icon: 
                bottom_right_icon: 
                arena_icon: 
            arena_frame: "<SpriteAddress>"
            owning_player: Opponent
        create_position: 
            sorting_key: 18
            position: ObjectPositionHand { owner: Opponent }
        create_animation: Unspecified
    CreateOrUpdateCard: 
        card: 
            card_id: O18
            revealed_to_viewer: true
            is_face_up: false
            card_icons: 
                top_left_icon: "1"
                top_right_icon: 
                bottom_left_icon: 
                arena_icon: 
            arena_frame: "<SpriteAddress>"
            owning_player: User
            revealed_card: 
                card_frame: "<SpriteAddress>"
                title_background: "<SpriteAddress>"
                jewel: "<SpriteAddress>"
                image: "<SpriteAddress>"
                title: "Test Overlord Spell"
                rules_text: "<RulesText>"
                targeting: 
                    can_play: true
                on_release_position: 
                    sorting_key: 4294967295
                    position: ObjectPositionStaging
        create_animation: DrawCard
    MoveGameObjects: 
        id: O18
        position: 
            sorting_key: 22
            position: ObjectPositionHand { owner: User }
    UpdateGameView: 
        user: 
            side: Overlord
            mana: 5
            action_tracker: 3
            can_take_action: true
        opponent: 
            side: Champion
            mana: 5
            can_take_action: false
        raid_active: false
    CreateOrUpdateCard: 
        card: 
            card_id: O4
            revealed_to_viewer: true
            is_face_up: false
            owning_player: User
            revealed_card: 
                targeting: 
                    can_play: true
        create_position: 
            sorting_key: 6
            position: ObjectPositionHand { owner: User }
        create_animation: Unspecified
    CreateOrUpdateCard: 
        card: 
            card_id: O8
            revealed_to_viewer: true
            is_face_up: false
            owning_player: User
            revealed_card: 
                targeting: 
                    can_play: true
        create_position: 
            sorting_key: 9
            position: ObjectPositionHand { owner: User }
        create_animation: Unspecified
    CreateOrUpdateCard: 
        card: 
            card_id: O9
            revealed_to_viewer: true
            is_face_up: false
            owning_player: User
            revealed_card: 
                targeting: 
                    can_play: true
        create_position: 
            sorting_key: 10
            position: ObjectPositionHand { owner: User }
        create_animation: Unspecified
    CreateOrUpdateCard: 
        card: 
            card_id: O25
            revealed_to_viewer: true
            is_face_up: false
            owning_player: User
            revealed_card: 
                targeting: 
                    can_play: true
        create_position: 
            sorting_key: 7
            position: ObjectPositionHand { owner: User }
        create_animation: Unspecified
    CreateOrUpdateCard: 
        card: 
            card_id: O36
            revealed_to_viewer: true
            is_face_up: false
            owning_player: User
            revealed_card: 
                targeting: 
                    can_play: true
        create_position: 
            sorting_key: 8
            position: ObjectPositionHand { owner: User }
        create_animation: Unspecified
    RenderInterface: 
    panels: 
        main_controls: 
        card_anchor_nodes: 
    DisplayGameMessage: Dusk
